# auto-servidores

./: .gitignore  README.md  auto-servidores-dashboard.html  cache.py  checkpoint.py  compactor.py  config.toml  config.yaml  gui.py  implementation_plan.md  index.py  main.py  orchestrator.py  package-lock.json  package.json  requirements.txt  seed.xlsx.bak  session.py  vite.config.js  vitest.config.js  worker.py
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DELIVERY.md  RELEASE_TEMPLATE.md
seed/: 1Noidentificados.xlsx  DURANGO.xlsx  example.xlsx
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  client.rs  compactor.rs  config.rs  lib.rs  main.rs  models.rs  orchestrator.rs  rate_limit.rs  seed_index.rs  system_info.rs  worker.rs
src-tauri/tests/: test_compactor_integration.rs  test_config_integration.rs  test_orchestrator_integration.rs  test_seed_index_integration.rs
src/__tests__/: app.config.test.js  app.events.test.js  app.filelist.test.js  app.processing.test.js  app.state.test.js
src/__tests__/mocks/: tauri.js
tests/: test_cache.py  test_checkpoint.py  test_compactor.py  test_index.py  test_session.py  test_worker.py
