[package]
name = "auto-servidores"
version = "2.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
calamine = "0.26"
rust_xlsxwriter = "0.79"
sha2 = "0.10"
rand = "0.8"
log = "0.4"
opener = "0.7"
env_logger = "0.11"
sysinfo = "0.33"
chrono = "0.4"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
